add info in jumbotron

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,22 +16,37 @@
 </div>
 
 <div class="container-fluid" style="padding: 0;">
-    <div class="jumbotron" style="border-radius: 0px;">
-
+    <div class="jumbotron d-flex align-items-center vh-80" style="border-radius: 0px;">
+        <div class="row mx-auto align-self-center">
+            <div class="col-lg-6 text-center mx-auto">
+                <h1 class="display-4">Iteration Project</h1>
+                <p style="padding-top: 18px;"> This website was created with the intention of being a record of
+                    all of the iterations through which
+                    various concepts of web development has been utilized to produce a more and more complex development product,
+                    in
+                    both
+                    external functionality and internal workings and design.
+                </p>
+                <p> Commonly Used for all Iterations </p>
+                    <img src="../static/images/Apache_Maven_logo.svg" alt="Maven Logo" width="200" th:src="@{/images/Apache_Maven_logo.svg}">
+                    <img src="../static/images/springio-ar21.svg" alt="Spring Logo" width="200" th:src="@{/images/springio-ar21.svg}">
+            </div>
+        </div>
     </div>
 </div>
 
+
+
 <div class="container">
 
-
-    <div id="iter1" style="background-color:tomato; margin: 20px; padding: 20px;">
+    <div id="iter1" style="background-color:#dcdcdc; margin: 20px; padding: 20px;">
         <p>Iteration 1</p>
         <div>
             <a th:href="@{/showIteration1}" class="btn btn-primary  col-md-1 offset-md-2">View</a>
         </div>
     </div>
 
-    <div id="iter2" style="background-color:tomato; margin: 20px; padding: 20px;">
+    <div id="iter2" style="background-color:#dcdcdc; margin: 20px; padding: 20px;">
         <p>Iteration 2</p>
         <div>
 
@@ -39,7 +54,7 @@
         </div>
     </div>
 
-    <div id="iter3" style="background-color:tomato; margin: 20px; padding: 20px;">
+    <div id="iter3" style="background-color:#dcdcdc; margin: 20px; padding: 20px;">
         <p>Iteration 3</p>
         <div>
 
