--- a/src/main/resources/templates/general.html
+++ b/src/main/resources/templates/general.html
@@ -9,7 +9,7 @@
 <div th:fragment="header">
     <div class="row" style="padding: 10px;">
         <div class="col-md-6 d-flex justify-content-center justify-content-lg-start">
-            <h1>Iteration Project</h1>
+            <h1><a th:href="@{/}" style="color:#26734d;text-decoration: none;">Iteration Project </a></h1>
         </div>
         <div class="col-md-6 align-self-center d-flex justify-content-center justify-content-lg-end">
             <nav class="float-right">
