--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Your first Spring application</title>
+    <title>Iteration Project</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.0.6/tsparticles.slim.bundle.min.js"></script>
 </head>
 
 <body>
@@ -21,8 +22,8 @@
     <div class="jumbotron d-flex align-items-center"  style="height: 600px;">
         <div class="row mx-auto align-self-center">
             <div class="col-lg-6 text-center mx-auto">
-                <h1 class="display-4">Welcome to Iteration Project</h1>
-                <p style="padding-top: 18px;"> This website was created to serve as a record of
+                <h1 class="display-4" style="font-weight: 500;">Welcome to <span style="color:#26734d">Iteration Project</span></h1>
+                <p style="padding-top: 18px;font-size:20px;"> This website was created to serve as a record of
                     all of the iterations through which
                     various concepts of web development has been utilized to produce a more and more complex iteration,
                     in both functionality and internal design.
@@ -59,7 +60,7 @@
 
 <div class="container" style="margin-top:105px;">
     <div class="row mx-auto align-self-center" style="padding-top:50px">
-        <h2 class="col-lg-6 text-center mx-auto">And Built Using</h2>
+        <h2 class="col-lg-6 text-center mx-auto">And Are Built Using</h2>
     </div>
 
     <div class="card mx-auto" style="width: 100%; height:110%;margin-top:50px;">
@@ -83,14 +84,14 @@
 
 <div class="container">
 
-    <div id="iter1" style="background-color:#dcdcdc; margin: 20px; padding: 20px;">
+    <div id="iter1" style="background-color:#dcdcdc; margin-top: 20px; padding: 20px;">
         <p>Iteration 1</p>
         <div>
             <a th:href="@{/showIteration1}" class="btn btn-primary  col-md-1 offset-md-2">View</a>
         </div>
     </div>
 
-    <div id="iter2" style="background-color:#dcdcdc; margin: 20px; padding: 20px;">
+    <div id="iter2" style="background-color:#dcdcdc; margin-top: 20px; padding: 20px;">
         <p>Iteration 2</p>
         <div>
 
@@ -98,7 +99,7 @@
         </div>
     </div>
 
-    <div id="iter3" style="background-color:#dcdcdc; margin: 20px; padding: 20px;">
+    <div id="iter3" style="background-color:#dcdcdc; margin-top: 20px; padding: 20px;">
         <p>Iteration 3</p>
         <div>
 
@@ -106,16 +107,6 @@
         </div>
 
     </div>
-
-    <p><a href="/hello">Greet the world!</a></p>
-
-    <form action="/hello" method="GET" id="nameForm">
-        <div>
-            <label for="nameField">How should the app call you?</label>
-            <input name="myName" id="nameField">
-            <button class="btn bt-primary">Greet me!</button>
-        </div>
-    </form>
 
 
     <a th:href="@{/addCustomerForm}" class="btn btn-primary mb-2">Add Customer</a>
@@ -145,60 +136,62 @@
     <footer th:insert="general.html :: footer"></footer>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.0.6/tsparticles.slim.bundle.min.js"></script>
-<script type="text/javascript">
-      const options = {
-        background: {
-          color: "#e9ecef", // the canvas background color
-        },
-        interactivity: {
-          events: {
-            onClick: {
-              // this handles the mouse click event
-              enable: true,
-              mode: "push", // this adds particles
-            },
-            onHover: {
-              // this handles the mouse hover event
-              enable: true,
-              mode: "repulse", // this make particles move away from the mouse
-            },
-          },
-          modes: {
-            push: {
-              quantity: 6, // number of particles to add
-            },
-            repulse: {
-              distance: 100, // the distance of the particles from the mouse
-            },
-          },
-        },
-        particles: {
-            links: {
-            color: "#607385",
-            distance: 150,
-            enable: true,
-            opacity: 0.3,
-            width: 1
-          },
-          move: {
-            enable: true, // this makes particles move
-            speed: { min: 1, max: 3 }, // this is the speed of the particles
-          },
-          opacity: {
-            value: { min: 0.3, max: 0.5 }, // this sets the opacity of the particles
-          },
-          size: {
-            value: { min: 1, max: 3 }, // this sets the size of the particles
-          },
-          color: {
-            value: "#607385",
-          }
-        },
-        fullScreen: { enable: false },
-      };
-       tsParticles.load("particles", options);
-</script>
+<!--<script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.0.6/tsparticles.slim.bundle.min.js"></script>-->
+<!--<script type="text/javascript">-->
+      <!--const options = {-->
+        <!--background: {-->
+          <!--color: "#e9ecef", // the canvas background color-->
+        <!--},-->
+        <!--interactivity: {-->
+          <!--events: {-->
+            <!--onClick: {-->
+              <!--// this handles the mouse click event-->
+              <!--enable: true,-->
+              <!--mode: "push", // this adds particles-->
+            <!--},-->
+            <!--onHover: {-->
+              <!--// this handles the mouse hover event-->
+              <!--enable: true,-->
+              <!--mode: "repulse", // this make particles move away from the mouse-->
+            <!--},-->
+          <!--},-->
+          <!--modes: {-->
+            <!--push: {-->
+              <!--quantity: 6, // number of particles to add-->
+            <!--},-->
+            <!--repulse: {-->
+              <!--distance: 100, // the distance of the particles from the mouse-->
+            <!--},-->
+          <!--},-->
+        <!--},-->
+        <!--particles: {-->
+            <!--links: {-->
+            <!--color: "#607385",-->
+            <!--distance: 150,-->
+            <!--enable: true,-->
+            <!--opacity: 0.3,-->
+            <!--width: 1-->
+          <!--},-->
+          <!--move: {-->
+            <!--enable: true, // this makes particles move-->
+            <!--speed: { min: 1, max: 3 }, // this is the speed of the particles-->
+          <!--},-->
+          <!--opacity: {-->
+            <!--value: { min: 0.3, max: 0.5 }, // this sets the opacity of the particles-->
+          <!--},-->
+          <!--size: {-->
+            <!--value: { min: 1, max: 3 }, // this sets the size of the particles-->
+          <!--},-->
+          <!--color: {-->
+            <!--value: "#607385",-->
+          <!--}-->
+        <!--},-->
+        <!--fullScreen: { enable: false },-->
+      <!--};-->
+       <!--tsParticles.load("particles", options);-->
+<!--</script>-->
 
+
+<script type="text/javascript" th:src="@{/js/myscripts.js}"></script>
 </body>
 </html>
