add restart button

--- a/src/main/resources/templates/iteration2Greet.html
+++ b/src/main/resources/templates/iteration2Greet.html
@@ -26,6 +26,10 @@
                 </form>
             </div>
 
+            <div th:href="@{/iteration2}" class="row align-self-center pt-2 pl-3">
+                <button type="submit" class="btn mt-4">Restart</button>
+            </div>
+
 
         </div>
 
