add iteration3 and various small changes

--- a/src/main/resources/templates/iter2-add-customer.html
+++ b/src/main/resources/templates/iter2-add-customer.html
@@ -21,10 +21,10 @@
         <input type="text" th:field="*{firstName}" placeholder="Enter First Name"/>
         <input type="text" th:field="*{lastName}" placeholder="Enter Last Name"/>
 
-        <button type="submit" class="btn btn-primary d-flex float-right" onclick="alert('Saved');">Save</button>
+        <button type="submit" class="btn btn-primary d-flex float-right" style="background-color:#e9ecef;border-color:#26734d;color:#26734d;border: 2px solid;" onclick="alert('Saved');">Save</button>
     </form>
     <hr/>
-    <button class="btn btn-primary d-flex float-right" onclick="window.history.go(-1); return false;">Back</button>
+    <button class="btn d-flex float-right" onclick="window.history.go(-1); return false;">Back</button>
 </div>
 
 
