--- a/src/main/resources/templates/iteration1.html
+++ b/src/main/resources/templates/iteration1.html
@@ -40,7 +40,7 @@
                     <p>Tip: There's a subtle way to say hi to the "World" as well.</p>
                     <div class="row">
                         <div class="col d-flex align-self-center justify-content-center">
-                            <a class="nav-item" onclick="window.history.go(-1); return false;" >Back</a>
+                            <a th:href="@{/}" class="btn default">Back To Home</a>
                         </div>
                         <div class="col d-flex align-self-center justify-content-center">
                             <a th:href="@{/showIteration2}" class="btn default">Next Iteration</a>
