--- a/src/main/resources/templates/iteration2.html
+++ b/src/main/resources/templates/iteration2.html
@@ -22,9 +22,7 @@
             <p>How should I call you?</p>
 
             <div class="row align-self-center pt-2 pl-3">
-
-                <a th:href="@{/showAddCustomerIter2}" class="btn btn-primary mb-2">click to answer</a>
-
+                <a th:href="@{/showAddCustomerIter2}" class="btn btn-primary mb-2" style="background-color:#e9ecef;border-color:#26734d;color:#26734d;border: 2px solid;">click to answer</a>
             </div>
 
         </div>
@@ -40,10 +38,10 @@
                     data.</p>
                     <div class="row">
                         <div class="col d-flex align-self-center justify-content-center">
-                            <a class="nav-item" onclick="window.history.go(-1); return false;">Back</a>
+                            <a th:href="@{/showIteration1}" class="btn default">Previous</a>
                         </div>
                         <div class="col d-flex align-self-center justify-content-center">
-                            <a th:href="@{/showIteration2}" class="btn default">Next Iteration</a>
+                            <a th:href="@{/showIteration3}" class="btn default">Next Iteration</a>
                         </div>
                     </div>
                 </div>
