--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Iteration Project</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/styles_index.css}">
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.0.6/tsparticles.slim.bundle.min.js"></script>
 </head>
@@ -16,14 +16,13 @@
 </div>
 
 
-
-
 <div class="container-fluid" style="position:relative;padding: 0;border-radius: 0px;z-index:1">
     <div id="particles" style="position:absolute;z-index:0;    top:0;    width:100%;    height:100%;"></div>
-    <div class="jumbotron d-flex align-items-center"  style="height: 600px;">
+    <div class="jumbotron d-flex align-items-center" style="height: 600px;">
         <div class="row mx-auto align-self-center">
             <div class="col-lg-6 text-center mx-auto">
-                <h1 class="display-4" style="font-weight: 500;">Welcome to <span style="color:#26734d">Iteration Project</span></h1>
+                <h1 class="display-4" style="font-weight: 500;">Welcome to <span
+                        style="color:#26734d">Iteration Project</span></h1>
                 <p style="padding-top: 18px;font-size:20px;"> This website was created to serve as a record of
                     all of the iterations through which
                     various concepts of web development has been utilized to produce a more and more complex iteration,
@@ -33,7 +32,6 @@
         </div>
     </div>
 </div>
-
 
 
 <div class="container" style="padding: 0;">
@@ -84,28 +82,57 @@
 
 <div class="container">
 
-    <div id="iter1" style="background-color:#dcdcdc; margin-top: 20px; padding: 20px;">
-        <p>Iteration 1</p>
-        <div>
-            <a th:href="@{/showIteration1}" class="btn btn-primary  col-md-1 offset-md-2">View</a>
+    <div id="iter1" class="row mx-auto" style="margin-top: 120px; padding: 20px;">
+        <div class="col d-flex justify-content-center">
+            <img class="img-fluid rounded bg-body shadow" width="480px" th:src="@{/images/iter1.jpg}"/>
+        </div>
+        <div class="col d-flex justify-content-center flex-column">
+            <div class="row align-self-center">
+                <h4>Iteration 1</h4>
+            </div>
+            <div class="row align-self-center">
+                <div>
+                    <a th:href="@{/showIteration1}" class="btn btn-primary"
+                       style="padding-left: 38px;padding-right: 38px;margin-top:20px;">View</a>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div id="iter2" style="background-color:#dcdcdc; margin-top: 20px; padding: 20px;">
-        <p>Iteration 2</p>
-        <div>
+    <div id="iter2" class="row mx-auto" style="margin-top: 120px; padding: 20px;">
 
-            <a th:href="@{/showIteration2}" class="btn btn-primary col-md-1 offset-md-2">View</a>
+        <div class="col d-flex justify-content-center flex-column">
+            <div class="row align-self-center">
+                <h4>Iteration 2</h4>
+            </div>
+            <div class="row align-self-center">
+                <div>
+                    <a th:href="@{/showIteration1}" class="btn btn-primary"
+                       style="padding-left: 38px;padding-right: 38px;margin-top:20px;">View</a>
+                </div>
+            </div>
         </div>
+        <div class="col d-flex justify-content-center">
+            <img class="img-fluid rounded bg-body shadow" width="480px" th:src="@{/images/iter1.jpg}"/>
+        </div>
+
     </div>
 
-    <div id="iter3" style="background-color:#dcdcdc; margin-top: 20px; padding: 20px;">
-        <p>Iteration 3</p>
-        <div>
-
-            <a th:href="@{/showIteration3}" class="btn btn-primary col-md-1 offset-md-2">View</a>
+    <div id="iter3" class="row mx-auto" style="margin-top: 120px; padding: 20px;">
+        <div class="col d-flex justify-content-center">
+            <img class="img-fluid rounded bg-body shadow" width="480px" th:src="@{/images/iter1.jpg}"/>
         </div>
-
+        <div class="col d-flex justify-content-center flex-column">
+            <div class="row align-self-center">
+                <h4>Iteration 3</h4>
+            </div>
+            <div class="row align-self-center">
+                <div>
+                    <a th:href="@{/showIteration1}" class="btn btn-primary"
+                       style="padding-left: 38px;padding-right: 38px;margin-top:20px;">View</a>
+                </div>
+            </div>
+        </div>
     </div>
 
 
