--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,42 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/styles_index.css}">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.0.6/tsparticles.slim.bundle.min.js"></script>
+    <script>
+        $(document).ready(function() {
+        console.log("document is ready");
+          $( "#img1" ).hover(
+            function() {
+            $(this).addClass('shadow-lg').css('cursor', 'pointer');
+          }, function() {
+            $(this).removeClass('shadow-lg');
+          }
+          );
+          $( "#img2" ).hover(
+            function() {
+            $(this).addClass('shadow-lg').css('cursor', 'pointer');
+          }, function() {
+            $(this).removeClass('shadow-lg');
+          }
+          );
+          $( "#img3" ).hover(
+            function() {
+            $(this).addClass('shadow-lg').css('cursor', 'pointer');
+          }, function() {
+            $(this).removeClass('shadow-lg');
+          }
+          );
+      });
+
+
+
+
+
+
+    </script>
 </head>
+
 
 <body>
 
@@ -34,12 +68,12 @@
 </div>
 
 
-<div class="container" style="padding: 0;">
+<div class="container" style="padding: 0;margin-top:220px;">
     <div class="row mx-auto align-self-center" style="padding-top:50px">
-        <h2 class="col-lg-6 text-center mx-auto">All Iterations Use</h2>
+        <h2 class="col-lg-6 text-center mx-auto">Project Uses</h2>
     </div>
 
-    <div class="row" style="padding-top: 35px">
+    <div class="row" style="padding-top: 135px">
         <div class="col-md-4 mx-auto d-flex justify-content-center align-self-center">
             <img class="img-fluid" src="../static/images/Apache_Maven_logo.svg" alt="Maven Logo" width="180"
                  style="height:60%;"
@@ -57,12 +91,12 @@
     </div>
 </div>
 
-<div class="container" style="margin-top:105px;">
+<div class="container" style="margin-top:220px;">
     <div class="row mx-auto align-self-center" style="padding-top:50px">
-        <h2 class="col-lg-6 text-center mx-auto">And Are Built Using</h2>
+        <h2 class="col-lg-6 text-center mx-auto">Along With</h2>
     </div>
 
-    <div class="card mx-auto" style="width: 100%; height:110%;margin-top:50px;">
+    <div class="card mx-auto" style="width: 100%; height:110%;margin-top:135px;">
         <div class="row no-gutters">
             <div class="col-md-7">
                 <img class="card-img" src="../static/images/mvc_architecture.png" alt="Card Image"
@@ -80,57 +114,68 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container-fluid" style="margin-bottom: 300px;margin-top:220px;width:80vw;">
 
-    <div id="iter1" class="row mx-auto" style="margin-top: 120px; padding: 20px;">
-        <div class="col d-flex justify-content-center">
-            <img class="img-fluid rounded bg-body shadow" width="480px" th:src="@{/images/iter1.jpg}"/>
-        </div>
-        <div class="col d-flex justify-content-center flex-column">
+    <div class="row mx-auto align-self-center" style="padding-top:50px">
+        <h2 class="col-lg-6 text-center mx-auto">Choose From Any Iterations</h2>
+    </div>
+
+    <div id="iter1" class="row mx-auto" style="margin-top: 150px; padding: 20px;">
+        <div class="col d-flex justify-content-center flex-column" style="margin-right:-30%;">
             <div class="row align-self-center">
                 <h4>Iteration 1</h4>
             </div>
             <div class="row align-self-center">
-                <div>
-                    <a th:href="@{/showIteration1}" class="btn btn-primary"
-                       style="padding-left: 38px;padding-right: 38px;margin-top:20px;">View</a>
-                </div>
+                <a th:href="@{/showIteration1}">
+
+                    <img id="img1" class="img-fluid" width="580px" style="border:.5px solid #26734d; margin-top:10px;"
+                         th:src="@{/images/iter1.jpg}"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="col d-flex justify-content-center flex-column">
+            <div class="row align-self-center">
             </div>
         </div>
     </div>
 
-    <div id="iter2" class="row mx-auto" style="margin-top: 120px; padding: 20px;">
-
+    <div id="iter2" class="row mx-auto" style="margin-top: 150px; padding: 20px;">
         <div class="col d-flex justify-content-center flex-column">
+            <div class="row align-self-center">
+            </div>
+        </div>
+        <div class="col d-flex justify-content-center flex-column" style="margin-left:-30%;">
             <div class="row align-self-center">
                 <h4>Iteration 2</h4>
             </div>
             <div class="row align-self-center">
-                <div>
-                    <a th:href="@{/showIteration1}" class="btn btn-primary"
-                       style="padding-left: 38px;padding-right: 38px;margin-top:20px;">View</a>
-                </div>
+                <a th:href="@{/showIteration2}">
+
+                    <img id="img2" class="img-fluid" width="580px" style="border:.5px solid #26734d; margin-top:10px;"
+                         th:src="@{/images/iter2.jpg}"/>
+                </a>
             </div>
         </div>
-        <div class="col d-flex justify-content-center">
-            <img class="img-fluid rounded bg-body shadow" width="480px" th:src="@{/images/iter1.jpg}"/>
-        </div>
-
     </div>
 
-    <div id="iter3" class="row mx-auto" style="margin-top: 120px; padding: 20px;">
-        <div class="col d-flex justify-content-center">
-            <img class="img-fluid rounded bg-body shadow" width="480px" th:src="@{/images/iter1.jpg}"/>
-        </div>
-        <div class="col d-flex justify-content-center flex-column">
+
+    <div id="iter3" class="row mx-auto" style="margin-top: 150px; padding: 20px;">
+        <div class="col d-flex justify-content-center flex-column" style="margin-right:-30%;">
             <div class="row align-self-center">
                 <h4>Iteration 3</h4>
             </div>
             <div class="row align-self-center">
-                <div>
-                    <a th:href="@{/showIteration1}" class="btn btn-primary"
-                       style="padding-left: 38px;padding-right: 38px;margin-top:20px;">View</a>
-                </div>
+                <a th:href="@{/showIteration3}">
+
+                    <img id="img3" class="img-fluid" width="580px" style="border:.5px solid #26734d; margin-top:10px;"
+                         th:src="@{/images/iter3.jpg}"/>
+                </a>
+            </div>
+        </div>
+
+        <div class="col d-flex justify-content-center flex-column">
+            <div class="row align-self-center">
             </div>
         </div>
     </div>
