--- a/src/main/resources/templates/general.html
+++ b/src/main/resources/templates/general.html
@@ -2,8 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="headerfiles">
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" th:href="@{/css/styles_general.css}">
 </head>
 <body>
 <div th:fragment="header">
@@ -13,10 +17,10 @@
         </div>
         <div class="col-md-6 align-self-center d-flex justify-content-center justify-content-lg-end">
             <nav class="float-right">
-                <a class="nav-item px-2" th:href="@{/showAbout}">About</a>
-                <a class="nav-item px-2" th:href="@{/showIteration1}">Iteration 1</a>
-                <a class="nav-item px-2" th:href="@{/showIteration2}">Iteration 2</a>
-                <a class="nav-item px-2" th:href="@{/showIteration3}">Iteration 3</a>
+                <a class="nav-item px-2" style="text-decoration: none;" th:href="@{/showAbout}">About</a>
+                <a class="nav-item px-2" style="text-decoration: none;" th:href="@{/showIteration1}">Iteration 1</a>
+                <a class="nav-item px-2" style="text-decoration: none;" th:href="@{/showIteration2}">Iteration 2</a>
+                <a class="nav-item px-2" style="text-decoration: none;" th:href="@{/showIteration3}">Iteration 3</a>
             </nav>
         </div>
     </div>
