--- a/src/main/resources/templates/iter2-add-customer.html
+++ b/src/main/resources/templates/iter2-add-customer.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/styles_general.css}">
     <link rel="stylesheet" th:href="@{/css/styles-iteration1.css}">
     <title>Add User Name</title>
 </head>
@@ -21,7 +22,7 @@
         <input type="text" th:field="*{firstName}" placeholder="Enter First Name"/>
         <input type="text" th:field="*{lastName}" placeholder="Enter Last Name"/>
 
-        <button type="submit" class="btn btn-primary d-flex float-right" style="background-color:#e9ecef;border-color:#26734d;color:#26734d;border: 2px solid;" onclick="alert('Saved');">Save</button>
+        <button type="submit" class="btn btn-primary d-flex float-right" style="background-color:white;border-color:#26734d;color:#26734d;border: 2px solid;" onclick="alert('Saved');">Save</button>
     </form>
     <hr/>
     <button class="btn d-flex float-right" onclick="window.history.go(-1); return false;">Back</button>
