--- a/src/main/resources/templates/iteration2Greet.html
+++ b/src/main/resources/templates/iteration2Greet.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/styles-iteration1.css}">
+    <link rel="stylesheet" th:href="@{/css/styles_general.css}">
     <title>Iteration 2</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
                 <form th:action="@{/Iter2Add}" method="POST">
                     <input type="hidden" th:field="*{customer.id}"/>
                     <button type="submit" class="btn mt-4"
-                            style="background-color:#e9ecef;border-color:#26734d;color:#26734d;border: 2px solid;">
+                            style="background-color:white;border-color:#26734d;color:#26734d;border: 2px solid;">
                         Greet me!
                     </button>
                 </form>
