fix hover area issue, update iter iamges

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -116,20 +116,20 @@
     </div>
 
     <div id="iter1" class="row mx-auto" style="margin-top: 150px; padding: 20px;">
-        <div class="col d-flex justify-content-center flex-column" style="margin-right:-30%;">
+        <div class="col d-flex justify-content-center flex-column" style="margin-right:-30%;z-index:1">
             <div class="row align-self-center">
                 <h4>Iteration 1</h4>
             </div>
             <div class="row align-self-center">
                 <a th:href="@{/showIteration1}">
 
-                    <img id="img1" class="img-fluid" width="580px" style="border:.5px solid #26734d; margin-top:10px;"
+                    <img id="img1" class="img-fluid" width="580px" style="border: 1px solid #d9dcdf; margin-top:10px;"
                          th:src="@{/images/iter1.jpg}"/>
                 </a>
             </div>
         </div>
 
-        <div class="col d-flex justify-content-center flex-column">
+        <div class="col d-flex justify-content-center flex-column" style="z-index:0">
             <div class="row align-self-center">
             </div>
         </div>
@@ -147,7 +147,7 @@
             <div class="row align-self-center">
                 <a th:href="@{/showIteration2}">
 
-                    <img id="img2" class="img-fluid" width="580px" style="border:.5px solid #26734d; margin-top:10px;"
+                    <img id="img2" class="img-fluid" width="580px" style="border:1px solid #d9dcdf; margin-top:10px;"
                          th:src="@{/images/iter2.jpg}"/>
                 </a>
             </div>
@@ -156,20 +156,20 @@
 
 
     <div id="iter3" class="row mx-auto" style="margin-top: 150px; padding: 20px;">
-        <div class="col d-flex justify-content-center flex-column" style="margin-right:-30%;">
+        <div class="col d-flex justify-content-center flex-column" style="margin-right:-30%;z-index:1">
             <div class="row align-self-center">
                 <h4>Iteration 3</h4>
             </div>
             <div class="row align-self-center">
                 <a th:href="@{/showIteration3}">
 
-                    <img id="img3" class="img-fluid" width="580px" style="border:.5px solid #26734d; margin-top:10px;"
+                    <img id="img3" class="img-fluid" width="580px" style="border:1px solid #d9dcdf; margin-top:10px;"
                          th:src="@{/images/iter3.jpg}"/>
                 </a>
             </div>
         </div>
 
-        <div class="col d-flex justify-content-center flex-column">
+        <div class="col d-flex justify-content-center flex-column" style="z-index:0">
             <div class="row align-self-center">
             </div>
         </div>
