change blurbs, add about page, connect to aws

--- a/src/main/resources/templates/iteration1.html
+++ b/src/main/resources/templates/iteration1.html
@@ -35,10 +35,10 @@
             <div class="card" style="padding-top:10px;background-color:#e9ecef;">
                 <div class="card-body"
                      style="padding-top:20px;padding-bottom:20px;background-color:#e9ecef;">
-                    <p>First step is of course, learning from the simplest tutorial on youtube one can find &#128512 </p>
                     <p>This shows the very first iteration, in which user encounters a page that will greet by the
                         name entered.</p>
-                    <p>Tip: There's a subtle way to say hi to the "World" as well.</p>
+                    <p>There are some obvious issues present such as that there is no proper view served when
+                    button or link is pressed.</p>
                     <div class="row">
                         <div class="col d-flex align-self-center justify-content-center">
                             <a th:href="@{/}" class="btn default">Back To Home</a>
