--- a/src/main/resources/templates/iteration2.html
+++ b/src/main/resources/templates/iteration2.html
@@ -33,10 +33,11 @@
             <div class="card" style="padding-top:10px;background-color:#e9ecef;">
                 <div class="card-body"
                      style="padding-top:20px;padding-bottom:20px;background-color:#e9ecef;">
-                    <p>This is the second iteration that now takes in user input as a form when user clicks on button
+                    <p>This is the second iteration. User input is submitted as a form when user clicks on button
                         to answer.</p>
-                    <p>We are now saving information about the user as a simple Bean, to start being able to carry around
-                    data.</p>
+                    <p>Information is handled internally as a Bean, and H2 in-memory database is used to store data.</p>
+                    <p>In the next iteration, process of adding user information will be simplified and more functionalities
+                    will be added.</p>
                     <div class="row">
                         <div class="col d-flex align-self-center justify-content-center">
                             <a th:href="@{/showIteration1}" class="btn default">Previous</a>
