--- a/src/main/resources/templates/iteration3.html
+++ b/src/main/resources/templates/iteration3.html
@@ -136,12 +136,13 @@
                 <div class="card" style="padding-top:10px;background-color:#e9ecef;">
                     <div class="card-body"
                          style="padding-top:20px;padding-bottom:20px;background-color:#e9ecef;">
-                        <p>In the third iteration user now has a page that if
-                            1) user entered information from previous
-                            iteration, will be visible here.
-                            2) can add or edit any users on the list.</p>
+                        <p>In the third iteration, user can see that
+                            1) if user entered information from previous
+                            iteration, their information is visible here.
+                            2) there is a list that user can add to or modify.</p>
                         <p>
-                            Modals have been implemented to simplify user experience.
+                            To address the shortcomings of the previous iterations,
+                            "modals" were implemented to help simplify user experience when they use add or edit feature.
                         </p>
                     </div>
                 </div>
@@ -153,16 +154,15 @@
                 <div class="card" style="padding-top:10px;background-color:#e9ecef;">
                     <div class="card-body"
                          style="padding-top:10px;padding-bottom:20px;background-color:#e9ecef;">
-                        <p>Third iteration itself went through a couple iterations. Under "Update Customer" is
-                        the old one which required user to type id, first name, last name, and also does not offer
-                        the same convenience and style of using modals.
+                        <p>Third iteration itself went through a couple iterations - shown next to this blurb is
+                        the old iteration, which required user to type in all three id, first name, and last name.
                         </p>
                         <div class="row">
                             <div class="col d-flex align-self-center justify-content-center">
                                 <a th:href="@{/showIteration2}" class="btn default">Previous</a>
                             </div>
                             <div class="col d-flex align-self-center justify-content-center">
-                                <a th:href="@{/showIteration3}" class="btn default">Next Iteration</a>
+
                             </div>
                         </div>
                     </div>
