--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -20,6 +20,7 @@
           }
           );
 
+
     </script>
 </head>
 
@@ -35,19 +36,22 @@
         <div class="row mx-auto align-self-center">
             <div class="col-lg-8 text-center mx-auto">
                 <h1 class="display-4" style="font-weight: 500;">About</h1>
-                <p style="padding-top: 18px;font-size:20px;"> Project mainly was created to demonstrate what I have
-                    learned and
-                    practiced in a interactive way,tying together everything into a cohesive website and something
-                    presentable.
+                <p style="padding-top: 18px;font-size:20px;"> Iteration Project demonstrates learnings about mvc pattern
+                    and
+                    web development in an interactive way, tying together everything into a cohesive, presentable
+                    website.
                     More iterations may be updated in the future.
                 </p>
                 <p style="padding-top: 18px;font-size:20px;">
-                    I can be contacted via social links at the bottom, or through my email: jinwoopark00@gmail.com.
-                    Don't hesitate to reach out.
+                    I can be contacted via social links at the bottom of the page, or through my email:
+                    jinwoopark00@gmail.com.
                 </p>
                 <p style="padding-top: 18px;font-size:20px;">
-                    To see more of what I create, check out jinwoopark.com
+                    Don't hesitate to reach out.
                 </p>
+                <!--<p style="padding-top: 18px;font-size:20px;">-->
+                <!--To see more of what I create, check out jinwoopark.com-->
+                <!--</p>-->
             </div>
         </div>
     </div>
