--- a/src/main/resources/templates/iteration2.html
+++ b/src/main/resources/templates/iteration2.html
@@ -23,7 +23,7 @@
             <p>How should I call you?</p>
 
             <div class="row align-self-center pt-2 pl-3">
-                <a th:href="@{/showAddCustomerIter2}" class="btn btn-primary mb-2" style="background-color:#e9ecef;border-color:#26734d;color:#26734d;border: 2px solid;">click to answer</a>
+                <a id="greetBtn" th:href="@{/showAddCustomerIter2}" class="btn mb-2">click to answer</a>
             </div>
 
         </div>
