--- a/src/main/resources/templates/iter2-add-customer.html
+++ b/src/main/resources/templates/iter2-add-customer.html
@@ -22,7 +22,7 @@
         <input type="text" th:field="*{firstName}" placeholder="Enter First Name"/>
         <input type="text" th:field="*{lastName}" placeholder="Enter Last Name"/>
 
-        <button type="submit" class="btn btn-primary d-flex float-right" style="background-color:white;border-color:#26734d;color:#26734d;border: 2px solid;" onclick="alert('Saved');">Save</button>
+        <button id="addBtn" type="submit" class="btn btn-primary d-flex float-right" onclick="alert('Saved');">Save</button>
     </form>
     <hr/>
     <button class="btn d-flex float-right" onclick="window.history.go(-1); return false;">Back</button>
