--- a/src/main/resources/templates/iteration1.html
+++ b/src/main/resources/templates/iteration1.html
@@ -38,7 +38,7 @@
                     <p>This shows the very first iteration, in which user encounters a page that will greet by the
                         name entered.</p>
                     <p>There are some obvious issues present such as that there is no proper view served when
-                    button or link is pressed.</p>
+                    button or link on the page is pressed.</p>
                     <div class="row">
                         <div class="col d-flex align-self-center justify-content-center">
                             <a th:href="@{/}" class="btn default">Back To Home</a>
