--- a/src/main/resources/templates/iteration3.html
+++ b/src/main/resources/templates/iteration3.html
@@ -21,13 +21,18 @@
             <div class="container">
 
                 <h2 align="center">User List</h2>
+
+                <a id="removeAllBtn" class="btn mb-2" style="float:right;margin-right:10px;" th:href="@{/removeAll}">
+                    Clear Table
+                </a>
+
                 <table class="table table-bordered table-striped">
                     <thead>
 
                     <th>First</th>
                     <th>Last</th>
                     <th style="width: 15%">
-                        <button id="addBtn" class="btn btn-info mx-5" data-toggle="modal" data-target="#addUserModal">
+                        <button id="addBtn" class="btn mx-5" data-toggle="modal" data-target="#addUserModal">
                             Add
                         </button>
                     </th>
@@ -45,14 +50,14 @@
                             </td>
                         </tr>
                     </tb>
-                    <!--th:href="@{/updateCustomer(customerId=${customer.id})}"-->
-
                 </table>
             </div>
+
             <hr style="margin-top:150px;margin-bottom:50px;"/>
+
             <div class="container">
                 <h4>Update Customer</h4>
-                <form action="/update" method="PUT">
+                <form th:action="@{/update}" method="POST">
                     <div>
                         <label for="id">ID of customer being updated:</label>
                         <input name="id" id="id">
@@ -76,7 +81,7 @@
                     <div class="modal-content">
                         <form id="myForm" action="/update" method="POST">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">Update Customer</h5>
+                                <h5 class="modal-title" id="exampleModalLongTitle">Update User</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
@@ -118,7 +123,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="submit" id="addUserBtn" class="btn btn-primary"> Update
+                                <button type="submit" id="addUserBtn" class="btn btn-primary"> Add
                                 </button>
                             </div>
                         </form>
@@ -138,11 +143,12 @@
                          style="padding-top:20px;padding-bottom:20px;background-color:#e9ecef;">
                         <p>In the third iteration, user can see that
                             1) if user entered information from previous
-                            iteration, their information is visible here.
-                            2) there is a list that user can add to or modify.</p>
+                            iteration, their information is visible here, along with 2 users preloaded from db.
+                            2) there is a list that user can now use to not only add but modify.</p>
                         <p>
                             To address the shortcomings of the previous iterations,
-                            "modals" were implemented to help simplify user experience when they use add or edit feature.
+                            "modals" were implemented to help simplify user experience when they use add or edit
+                            feature.
                         </p>
                     </div>
                 </div>
@@ -154,8 +160,16 @@
                 <div class="card" style="padding-top:10px;background-color:#e9ecef;">
                     <div class="card-body"
                          style="padding-top:10px;padding-bottom:20px;background-color:#e9ecef;">
-                        <p>Third iteration itself went through a couple iterations - shown next to this blurb is
-                        the old iteration, which required user to type in all three id, first name, and last name.
+                        <p>Third iteration itself went through a couple iterations. </p>
+                        <p>
+                            Shown under "Update User" is an older iteration, which required user to type in all three
+                            id, first name, and last name.
+                        </p>
+                        <p>
+                            Although table above will be updated with this iteration too since database is shared
+                            between the iterations, update
+                            after clearing the db is not handled due to the fact that ids are sequentially generated and
+                            are not meant to be reset with the deletion of the records.
                         </p>
                         <div class="row">
                             <div class="col d-flex align-self-center justify-content-center">
@@ -193,6 +207,10 @@ function updateCustomer(id) {
             <!--alert("Updating Customer with ID " + id);-->
             document.getElementById("selectedCustomerId").value = id;
 }
+
+
+
+
 
 </script>
 
